# HIHO-problems

./: CMakeLists.txt  LICENSE  README.md  abstract_problem.h  main.cpp  problem.cpp  problem.h
coding-challenges/: ms_6_17_p1.cpp  ms_6_17_p1.h  ms_6_17_p2.cpp  ms_6_17_p2.h  ms_6_17_p3.cpp  ms_6_17_p3.h  ms_6_17_p4.cpp  ms_6_17_p4.h
problem-set/: _1014_trie_tree.cpp  _1014_trie_tree.h  _1015_kmp.cpp  _1015_kmp.h  _1015_kmp_AC1.cpp  _1015_kmp_AC2.cpp  _1032_longest_palindromic_substring.cpp  _1032_longest_palindromic_substring.h  _1033_alternating_sums.cpp  _1033_alternating_sums.h
util/: debug.h
weekly-challenges/: abstract_problem.h  week154.cpp  week154.h  week154_AC1.cpp  week154_AC1.h  week155.cpp  week155.h  week156.cpp  week156.h  week157.cpp  week157.h
